--- a/about.html
+++ b/about.html
@@ -22,6 +22,7 @@ header-img: "img/about-bg.jpg"
     <li>手游</li>
     <li>移动应用</li>
     <li>BIG DATA</li>
+    <li>LPIC</li>
     </ul>
     </li>
     <li>
