--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "KC's Skylight"
+description: "A father, a programmer and designer."
 ---
 
 {% for post in paginator.posts %}
