--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@ header-img: "img/about-bg.jpg"
 <div class="comment">
     <div class="ds-thread"
     {% if site.duoshuo_username == "kchu" %}
-        data-thread-id="1187623191091085319"
+        data-thread-key="kchu/about"
     {% else %}
         data-thread-key="{{site.duoshuo_username}}/about"
     {% endif %}
